Updater, overall code cleanup